--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Childcare Rota</title>
-<link rel="stylesheet" href="style.css"/>
+<link rel="stylesheet" href="style.css" />
 </head>
 <body>
 <h1>Childcare Rota</h1>
 <div id="calendar"></div>
+<div class="legend">
+<p><span class="legend-box" style="border-top: 5px solid #ffff66;"></span> Drop-off by Mother</p>
+<p><span class="legend-box" style="border-top: 5px solid #66ff66;"></span> Drop-off by Father</p>
+<p><span class="legend-box" style="border-bottom: 5px solid #ffff66;"></span> Pick-up by Mother</p>
+<p><span class="legend-box" style="border-bottom: 5px solid #66ff66;"></span> Pick-up by Father</p>
+</div>
 <script src="script.js"></script>
 </body>
 </html>
