--- a/index.html
+++ b/index.html
@@ -7,14 +7,8 @@
 <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-<h1>Childcare Rota</h1>
+<h1>Childcare Rota (July–December 2025)</h1>
 <div id="calendar"></div>
-<div class="legend">
-<p><span class="legend-box" style="border-top: 5px solid #FFC0CB;"></span> Drop-off by Mother</p>
-<p><span class="legend-box" style="border-top: 5px solid #0096FF;"></span> Drop-off by Father</p>
-<p><span class="legend-box" style="border-bottom: 5px solid #ffff66;"></span> Pick-up by Mother</p>
-<p><span class="legend-box" style="border-bottom: 5px solid #66ff66;"></span> Pick-up by Father</p>
-</div>
-<script src="script.js"></script>
+<script src="script.js" defer></script>
 </body>
 </html>
