--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
     <div><span class="legend-box" style="background-color: #ffe5e5;"></span> Appointment</div>
   </div>
 
+  <div style="text-align:center; margin: 20px;">
+    <button onclick="showSummary()">View Summary</button>
+  </div>
+
   <div id="calendar"></div>
+  <div id="summary" style="display: none; max-width: 1000px; margin: 0 auto;"></div>
+
   <script src="script.js" defer></script>
 </body>
 </html>
