--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
     <div><span class="legend-box" style="background-color: #ffe5e5;"></span> Appointment</div>
   </div>
 
-  <div style="text-align:center; margin: 20px;">
-    <button onclick="showSummary()">View Summary</button>
-  </div>
+  <button id="showSummaryBtn">Show Summary</button>
 
   <div id="calendar"></div>
-  <div id="summary" style="display: none; max-width: 1000px; margin: 0 auto;"></div>
+
+  <div id="summary" style="display:none; max-width: 800px; margin: 20px auto; background: #fff; padding: 15px; border: 1px solid #ccc;"></div>
 
   <script src="script.js" defer></script>
 </body>
