--- a/index.html
+++ b/index.html
@@ -3,28 +3,29 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Childcare Rota</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>Childcare Schedule</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <h1>Childcare Rota (July–December 2025)</h1>
+  <header>
+    <h1>Childcare Schedule Calendar</h1>
+    <button id="showSummaryBtn">Show Summary</button>
+  </header>
 
   <!-- Legend -->
   <div class="legend">
-    <div><span class="legend-box" style="border-top: 15px solid #FFC0CB;"></span> Mother Drop-off</div>
-    <div><span class="legend-box" style="border-top: 15px solid #0096FF;"></span> Father Drop-off</div>
-    <div><span class="legend-box" style="border-bottom: 10px solid #ffff66;"></span> Mother Pick-up</div>
-    <div><span class="legend-box" style="border-bottom: 10px solid #66ff66;"></span> Father Pick-up</div>
-    <div><span class="legend-box" style="background-color: #ffe5e5;"></span> Appointment</div>
+    <div><span class="legend-box" style="border-left: 4px solid #ffcc00;"></span> Mother Drop-off</div>
+    <div><span class="legend-box" style="border-left: 4px solid #3399ff;"></span> Father Drop-off</div>
+    <div><span class="legend-box" style="border-right: 4px solid #ffcc00;"></span> Mother Pick-up</div>
+    <div><span class="legend-box" style="border-right: 4px solid #3399ff;"></span> Father Pick-up</div>
+    <div><span class="legend-box" style="background-color: #ffebcc;"></span> Appointment</div>
   </div>
 
-  <div style="text-align:center; margin-bottom:15px;">
-    <button id="showSummaryBtn">Show Summary</button>
-  </div>
+  <main>
+    <section id="calendar"></section>
+    <section id="summary" style="display:none;"></section>
+  </main>
 
-  <div id="calendar"></div>
-  <div id="summary" style="display:none;"></div>
-
-  <script src="script.js" defer></script>
+  <script src="script.js"></script>
 </body>
 </html>
