--- a/index.html
+++ b/index.html
@@ -3,29 +3,60 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Childcare Schedule</title>
-  <link rel="stylesheet" href="styles.css" />
+  <title>Childcare Rota</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <h1>Childcare Rota (July–December 2025)</h1>
+
   <header>
-    <h1>Childcare Schedule Calendar</h1>
+    <button id="showCalendarBtn">Show Calendar</button>
     <button id="showSummaryBtn">Show Summary</button>
+    <button id="exportCsvBtn">Export Summary to CSV</button>
   </header>
 
   <!-- Legend -->
   <div class="legend">
-    <div><span class="legend-box" style="border-left: 4px solid #ffcc00;"></span> Mother Drop-off</div>
-    <div><span class="legend-box" style="border-left: 4px solid #3399ff;"></span> Father Drop-off</div>
-    <div><span class="legend-box" style="border-right: 4px solid #ffcc00;"></span> Mother Pick-up</div>
-    <div><span class="legend-box" style="border-right: 4px solid #3399ff;"></span> Father Pick-up</div>
-    <div><span class="legend-box" style="background-color: #ffebcc;"></span> Appointment</div>
+    <div><span class="legend-box" style="border-top: 15px solid #FFC0CB;"></span> Mother Drop-off</div>
+    <div><span class="legend-box" style="border-top: 15px solid #0096FF;"></span> Father Drop-off</div>
+    <div><span class="legend-box" style="border-bottom: 10px solid #ffff66;"></span> Mother Pick-up</div>
+    <div><span class="legend-box" style="border-bottom: 10px solid #66ff66;"></span> Father Pick-up</div>
+    <div><span class="legend-box" style="background-color: #ffe5e5;"></span> Appointment</div>
   </div>
 
-  <main>
-    <section id="calendar"></section>
-    <section id="summary" style="display:none;"></section>
-  </main>
+  <div id="calendar"></div>
 
-  <script src="script.js"></script>
+  <div id="summary" style="display:none;">
+    <div id="filters" style="max-width: 1000px; margin: 10px auto;">
+      <label for="filterCaregiver">Filter by Caregiver:</label>
+      <select id="filterCaregiver">
+        <option value="all">All</option>
+        <option value="mother">Mother</option>
+        <option value="father">Father</option>
+      </select>
+
+      <label for="filterChild" style="margin-left: 20px;">Filter by Child:</label>
+      <select id="filterChild">
+        <option value="all">All</option>
+        <option value="ivy">Ivy</option>
+        <option value="everly">Everly</option>
+      </select>
+    </div>
+    <table>
+      <thead>
+        <tr>
+          <th>Date</th>
+          <th>Month</th>
+          <th>Caregivers</th>
+          <th>Appointment</th>
+          <th>Children</th>
+          <th>Notes</th>
+        </tr>
+      </thead>
+      <tbody id="summaryBody"></tbody>
+    </table>
+  </div>
+
+  <script src="script.js" defer></script>
 </body>
 </html>
