--- a/index.html
+++ b/index.html
@@ -2,18 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Childcare Rota</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <h1>Childcare Rota (July–December 2025)</h1>
 
-  <header>
+  <!-- Buttons -->
+  <div class="button-container">
     <button id="showCalendarBtn">Show Calendar</button>
     <button id="showSummaryBtn">Show Summary</button>
     <button id="exportCsvBtn">Export Summary to CSV</button>
-  </header>
+  </div>
 
   <!-- Legend -->
   <div class="legend">
@@ -24,10 +25,13 @@
     <div><span class="legend-box" style="background-color: #ffe5e5;"></span> Appointment</div>
   </div>
 
+  <!-- Calendar -->
   <div id="calendar"></div>
 
-  <div id="summary" style="display:none;">
-    <div id="filters" style="max-width: 1000px; margin: 10px auto;">
+  <!-- Summary -->
+  <div id="summary" style="display: none;">
+    <h2>Summary View</h2>
+    <div class="filters">
       <label for="filterCaregiver">Filter by Caregiver:</label>
       <select id="filterCaregiver">
         <option value="all">All</option>
@@ -35,7 +39,7 @@
         <option value="father">Father</option>
       </select>
 
-      <label for="filterChild" style="margin-left: 20px;">Filter by Child:</label>
+      <label for="filterChild">Filter by Child:</label>
       <select id="filterChild">
         <option value="all">All</option>
         <option value="ivy">Ivy</option>
@@ -46,11 +50,13 @@
       <thead>
         <tr>
           <th>Date</th>
-          <th>Month</th>
-          <th>Caregivers</th>
+          <th>Day</th>
+          <th>Drop-off</th>
+          <th>Pick-up</th>
           <th>Appointment</th>
-          <th>Children</th>
-          <th>Notes</th>
+          <th>Ivy</th>
+          <th>Everly</th>
+          <th>Comments</th>
         </tr>
       </thead>
       <tbody id="summaryBody"></tbody>
