--- a/index.html
+++ b/index.html
@@ -2,55 +2,71 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Childcare Rota</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Childcare Rota (July–December 2025)</h1>
 
-  <div class="button-container">
-    <button id="showCalendarBtn">Show Calendar</button>
-    <button id="showSummaryBtn">Show Summary</button>
-    <button id="exportCsvBtn">Export Summary to CSV</button>
-  </div>
-
-  <div class="legend">
-    <div><span class="legend-box" style="border-top:15px solid #FFC0CB"></span>Mother Drop‑off</div>
-    <div><span class="legend-box" style="border-top:15px solid #0096FF"></span>Father Drop‑off</div>
-    <div><span class="legend-box" style="border-bottom:10px solid #ffff66"></span>Mother Pick‑up</div>
-    <div><span class="legend-box" style="border-bottom:10px solid #66ff66"></span>Father Pick‑up</div>
-    <div><span class="legend-box" style="background:#ffe5e5"></span>Appointment</div>
-  </div>
-
-  <div id="calendar"></div>
-
-  <div id="summary" style="display:none;">
-    <h2>Summary</h2>
-    <div id="filters">
-      <label for="filterCaregiver">Caregiver:</label>
-      <select id="filterCaregiver">
-        <option value="all">All</option>
-        <option value="mother">Mother</option>
-        <option value="father">Father</option>
-      </select>
-      <label for="filterChild">Child:</label>
-      <select id="filterChild">
-        <option value="all">All</option>
-        <option value="ivy">Ivy</option>
-        <option value="everly">Everly</option>
-      </select>
+  <header>
+    <h1>Childcare Rota</h1>
+    <div class="button-group">
+      <button id="showCalendarBtn">View Calendar</button>
+      <button id="showSummaryBtn">View Summary</button>
+      <button id="exportCsvBtn">Export CSV</button>
     </div>
-    <table>
-      <thead>
-        <tr>
-          <th>Date</th><th>Day</th><th>Drop-off</th><th>Pick-up</th><th>Appointment</th><th>Ivy</th><th>Everly</th><th>Notes</th>
-        </tr>
-      </thead>
-      <tbody id="summaryBody"></tbody>
-    </table>
-  </div>
+    <div class="filters">
+      <label>
+        Filter by Caregiver:
+        <select id="filterCaregiver">
+          <option value="all">All</option>
+          <option value="mother">Mother</option>
+          <option value="father">Father</option>
+        </select>
+      </label>
+      <label>
+        Filter by Child:
+        <select id="filterChild">
+          <option value="all">All</option>
+          <option value="ivy">Ivy</option>
+          <option value="everly">Everly</option>
+        </select>
+      </label>
+    </div>
+  </header>
 
+  <main>
+    <div id="calendar"></div>
+
+    <section id="summary" style="display:none;">
+      <h2>Summary</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>Date</th>
+            <th>Day</th>
+            <th>Drop-off</th>
+            <th>Pick-up</th>
+            <th>Appointment</th>
+            <th>Ivy</th>
+            <th>Everly</th>
+            <th>Notes</th>
+          </tr>
+        </thead>
+        <tbody id="summaryBody"></tbody>
+      </table>
+    </section>
+  </main>
+
+  <footer>
+    <p><strong>Legend:</strong> <span class="legend mother">Mother</span> <span class="legend father">Father</span> <span class="legend appointment">Appointment</span></p>
+  </footer>
+
+  <!-- Firebase SDK (compat) -->
+  <script src="https://www.gstatic.com/firebasejs/9.24.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.24.0/firebase-database-compat.js"></script>
+
+  <!-- Main script -->
   <script src="script.js" defer></script>
 </body>
 </html>
