--- a/index.html
+++ b/index.html
@@ -1,63 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Childcare Rota with Firebase Login</title>
-<style>
-  /* Include your CSS below (see next section) */
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Childcare Rota</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <h1>Childcare Rota (July–December 2025)</h1>
 
-<header>
-  <h1>Childcare Rota</h1>
-  <div id="auth">
-    <input id="email" type="email" placeholder="Email" />
-    <input id="password" type="password" placeholder="Password" />
-    <button id="login-btn">Login</button>
-    <button id="signup-btn">Sign Up</button>
-    <button id="logout-btn" style="display:none;">Logout</button>
-    <div id="auth-message"></div>
+  <!-- Authentication UI -->
+  <div id="authContainer">
+    <h2>Login / Sign Up</h2>
+    <input type="email" id="emailInput" placeholder="Email" />
+    <input type="password" id="passwordInput" placeholder="Password" />
+    <button id="signUpBtn">Sign Up</button>
+    <button id="loginBtn">Login</button>
+    <button id="logoutBtn" style="display:none;">Logout</button>
+    <div id="authMessage">Please log in or sign up.</div>
   </div>
-</header>
 
-<nav>
-  <button id="showCalendarBtn">Show Calendar</button>
-  <button id="showSummaryBtn">Show Summary</button>
-  <button id="exportCsvBtn">Export CSV</button>
-  <select id="filterCaregiver">
-    <option value="">Filter by Caregiver</option>
-    <option value="mother">Mother</option>
-    <option value="father">Father</option>
-  </select>
-  <select id="filterChild">
-    <option value="">Filter by Child</option>
-    <option value="ivy">Ivy</option>
-    <option value="everly">Everly</option>
-  </select>
-</nav>
+  <div class="button-container" style="display:none;" id="appButtons">
+    <button id="showCalendarBtn">Show Calendar</button>
+    <button id="showSummaryBtn">Show Summary</button>
+    <button id="exportCsvBtn">Export Summary to CSV</button>
+  </div>
 
-<main>
-  <section id="calendar" style="display:flex; flex-wrap: wrap; gap:1em;"></section>
-  <section id="summary" style="display:none;">
-    <table border="1">
+  <div class="legend" style="display:none;" id="legendContainer">
+    <div><span class="legend-box" style="border-top:15px solid #FFC0CB"></span>Mother Drop‑off</div>
+    <div><span class="legend-box" style="border-top:15px solid #0096FF"></span>Father Drop‑off</div>
+    <div><span class="legend-box" style="border-bottom:10px solid #ffff66"></span>Mother Pick‑up</div>
+    <div><span class="legend-box" style="border-bottom:10px solid #66ff66"></span>Father Pick‑up</div>
+    <div><span class="legend-box" style="background:#ffe5e5"></span>Appointment</div>
+  </div>
+
+  <div id="calendar" style="display:none;"></div>
+
+  <div id="summary" style="display:none;">
+    <h2>Summary</h2>
+    <div id="filters">
+      <label for="filterCaregiver">Caregiver:</label>
+      <select id="filterCaregiver">
+        <option value="all">All</option>
+        <option value="mother">Mother</option>
+        <option value="father">Father</option>
+      </select>
+      <label for="filterChild">Child:</label>
+      <select id="filterChild">
+        <option value="all">All</option>
+        <option value="ivy">Ivy</option>
+        <option value="everly">Everly</option>
+      </select>
+    </div>
+    <table>
       <thead>
-        <tr><th>Date</th><th>Details</th></tr>
+        <tr>
+          <th>Date</th><th>Day</th><th>Drop-off</th><th>Pick-up</th><th>Appointment</th><th>Ivy</th><th>Everly</th><th>Notes</th>
+        </tr>
       </thead>
       <tbody id="summaryBody"></tbody>
     </table>
-  </section>
-</main>
+  </div>
 
-<script type="module">
-  /* Your JavaScript below (see JS section) */
-</script>
-
-<!-- Firebase SDKs -->
-<script src="https://www.gstatic.com/firebasejs/9.24.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.24.0/firebase-auth-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.24.0/firebase-firestore-compat.js"></script>
-
+  <script type="module" src="script.js" defer></script>
 </body>
 </html>
