--- a/login.html
+++ b/login.html
@@ -2,92 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Login - Childcare Rota</title>
-  <style>
-    body {font-family: Arial, sans-serif; background:#f5f5f5; display:flex; justify-content:center; align-items:center; height:100vh; margin:0;}
-    .login-container {background:#fff; padding:30px; border-radius:8px; box-shadow:0 2px 10px rgba(0,0,0,0.1); width:320px;}
-    h2 {text-align:center; margin-bottom:20px;}
-    input {width:100%; padding:10px; margin:8px 0; box-sizing:border-box;}
-    button {width:100%; padding:10px; margin-top:12px; background:#0096FF; color:#fff; border:none; border-radius:4px; cursor:pointer; font-size:1em;}
-    button:hover {background:#0077cc;}
-    .error {color:red; font-size:0.9em; margin-top:10px; text-align:center;}
-    .toggle-link {margin-top:12px; text-align:center; cursor:pointer; color:#0096FF; text-decoration:underline; user-select:none;}
-  </style>
+  <link rel="stylesheet" href="styles.css" />
 </head>
-<body>
+<body class="login-body">
   <div class="login-container">
-    <h2 id="formTitle">Login</h2>
-    <input type="email" id="email" placeholder="Email" />
-    <input type="password" id="password" placeholder="Password" />
-    <button id="submitBtn">Login</button>
-    <div class="error" id="errorMsg"></div>
-    <div class="toggle-link" id="toggleForm">Don't have an account? Sign up</div>
+    <h1>Childcare Rota</h1>
+    <form id="authForm">
+      <input type="email" id="email" placeholder="Email" required />
+      <input type="password" id="password" placeholder="Password" required />
+      <button type="submit" id="loginBtn">Login</button>
+      <button type="button" id="signupBtn">Sign Up</button>
+      <p id="authError" class="error-text"></p>
+    </form>
   </div>
 
-  <!-- Firebase SDK -->
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-app.js";
-    import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-auth.js";
-
-    const firebaseConfig = {
-      apiKey: "AIzaSyBekbb2wy8cO1zJ9lTj7eC64sOZBYa-4PM",
-      authDomain: "childcare-rota-4.firebaseapp.com",
-      projectId: "childcare-rota-4",
-      storageBucket: "childcare-rota-4.firebasestorage.app",
-      messagingSenderId: "703216575309",
-      appId: "1:703216575309:web:c69096afd83ce1bce40d04"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-
-    const emailInput = document.getElementById("email");
-    const passwordInput = document.getElementById("password");
-    const submitBtn = document.getElementById("submitBtn");
-    const errorMsg = document.getElementById("errorMsg");
-    const toggleForm = document.getElementById("toggleForm");
-    const formTitle = document.getElementById("formTitle");
-
-    let isLogin = true;
-
-    toggleForm.addEventListener("click", () => {
-      isLogin = !isLogin;
-      formTitle.textContent = isLogin ? "Login" : "Sign Up";
-      submitBtn.textContent = isLogin ? "Login" : "Sign Up";
-      toggleForm.textContent = isLogin ? "Don't have an account? Sign up" : "Already have an account? Login";
-      errorMsg.textContent = "";
-    });
-
-    submitBtn.addEventListener("click", () => {
-      const email = emailInput.value.trim();
-      const password = passwordInput.value.trim();
-      errorMsg.textContent = "";
-
-      if (!email || !password) {
-        errorMsg.textContent = "Please enter email and password.";
-        return;
-      }
-
-      if (isLogin) {
-        signInWithEmailAndPassword(auth, email, password)
-          .then(() => {
-            // Redirect to app page
-            window.location.href = "app.html";
-          })
-          .catch(error => {
-            errorMsg.textContent = error.message;
-          });
-      } else {
-        createUserWithEmailAndPassword(auth, email, password)
-          .then(() => {
-            window.location.href = "app.html";
-          })
-          .catch(error => {
-            errorMsg.textContent = error.message;
-          });
-      }
-    });
-  </script>
+  <script type="module" src="login.js"></script>
 </body>
 </html>
