--- a/index.html
+++ b/index.html
@@ -2,58 +2,62 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Childcare Rota</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Childcare Calendar & Summary</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <h1>Childcare Rota (July–December 2025)</h1>
+  <h1>Childcare Calendar</h1>
 
+  <!-- Filter Section -->
+  <div id="filters">
+    <label for="filterCaregiver">Filter Caregiver:</label>
+    <select id="filterCaregiver">
+      <option value="all">All</option>
+      <option value="mother">Mother</option>
+      <option value="father">Father</option>
+    </select>
+
+    <label for="filterChild">Filter Child:</label>
+    <select id="filterChild">
+      <option value="all">All</option>
+      <option value="ivy">Ivy</option>
+      <option value="everly">Everly</option>
+    </select>
+  </div>
+
+  <!-- Buttons for toggle and export -->
   <div class="button-container">
     <button id="showCalendarBtn">Show Calendar</button>
     <button id="showSummaryBtn">Show Summary</button>
-    <button id="exportCsvBtn">Export Summary to CSV</button>
-    <!-- Logout button added here -->
-    <button id="logoutBtn" style="float:right;">Logout</button>
+    <button id="exportCsvBtn">Export CSV</button>
+    <button id="logoutBtn">Logout</button>
   </div>
 
-  <div class="legend">
-    <div><span class="legend-box" style="border-top:15px solid #FFC0CB"></span>Mother Drop‑off</div>
-    <div><span class="legend-box" style="border-top:15px solid #0096FF"></span>Father Drop‑off</div>
-    <div><span class="legend-box" style="border-bottom:10px solid #ffff66"></span>Mother Pick‑up</div>
-    <div><span class="legend-box" style="border-bottom:10px solid #66ff66"></span>Father Pick‑up</div>
-    <div><span class="legend-box" style="background:#ffe5e5"></span>Appointment</div>
-  </div>
-
+  <!-- Calendar Container -->
   <div id="calendar"></div>
 
-  <div id="summary" style="display:none;">
+  <!-- Summary Container -->
+  <section id="summary" style="display:none;">
     <h2>Summary</h2>
-    <div id="filters">
-      <label for="filterCaregiver">Caregiver:</label>
-      <select id="filterCaregiver">
-        <option value="all">All</option>
-        <option value="mother">Mother</option>
-        <option value="father">Father</option>
-      </select>
-      <label for="filterChild">Child:</label>
-      <select id="filterChild">
-        <option value="all">All</option>
-        <option value="ivy">Ivy</option>
-        <option value="everly">Everly</option>
-      </select>
-    </div>
     <table>
       <thead>
         <tr>
-          <th>Date</th><th>Day</th><th>Drop-off</th><th>Pick-up</th><th>Appointment</th><th>Ivy</th><th>Everly</th><th>Notes</th>
+          <th>Date</th>
+          <th>Weekday</th>
+          <th>Drop-off</th>
+          <th>Pick-up</th>
+          <th>Appointment</th>
+          <th>Ivy</th>
+          <th>Everly</th>
+          <th>Comments</th>
         </tr>
       </thead>
       <tbody id="summaryBody"></tbody>
     </table>
-  </div>
+  </section>
 
-  <!-- Firebase SDKs -->
+  <!-- Scripts -->
   <script type="module" src="script.js"></script>
 </body>
 </html>
