--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Childcare Calendar & Summary</title>
   <style>
-    /* === Original Styles === */
+    /* === Original Styles (modified to remove hover and appointment highlight) === */
     body {
       font-family: Arial, sans-serif;
       margin: 20px;
@@ -63,9 +63,8 @@
       display: flex;
       flex-direction: column;
     }
-    .day:hover {
-      background: #f0f8ff;
-    }
+    /* Removed the .day:hover rule */
+
     .day.empty {
       background-color: #f9f9f9;
       border: none;
@@ -94,10 +93,8 @@
     .father-pickup {
       border-bottom: 10px solid #66ff66;
     }
-    .has-appointment {
-      background: #ffe5e5 !important;
-      border-top: 3px solid #d32f2f;
-    }
+    /* Removed .has-appointment styling */
+
     .week-overlay {
       position: absolute;
       top: 4px;
