--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <div id="calendar"></div>
 
-  <div id="summary">
+  <div id="summary" style="display:none;">
     <h2>Summary</h2>
     <table>
       <thead>
