--- a/index.html
+++ b/index.html
@@ -32,7 +32,14 @@
     </select>
   </div>
 
-  <div id="calendar"></div>
+  <div id="calendar-container">
+    <div class="month-navigation">
+      <button id="prevMonthBtn">← Previous</button>
+      <h2 id="monthYearLabel"></h2>
+      <button id="nextMonthBtn">Next →</button>
+    </div>
+    <div id="calendar"></div>
+  </div>
 
   <div id="summary" style="display:none;">
     <h2>Summary</h2>
