--- a/index.html
+++ b/index.html
@@ -32,14 +32,9 @@
     </select>
   </div>
 
-  <div id="calendar-container">
-    <div class="month-navigation">
-      <button id="prevMonthBtn">← Previous</button>
-      <h2 id="monthYearLabel"></h2>
-      <button id="nextMonthBtn">Next →</button>
-    </div>
-    <div id="calendar"></div>
-  </div>
+  <!-- Month navigation added dynamically by JS -->
+
+  <div id="calendar"></div>
 
   <div id="summary" style="display:none;">
     <h2>Summary</h2>
