--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
     </select>
   </div>
 
-  <!-- Month navigation added dynamically by JS -->
+  <div id="monthNavigation">
+    <button id="prevMonthBtn">&lt; Prev</button>
+    <span id="monthLabel"></span>
+    <button id="nextMonthBtn">Next &gt;</button>
+  </div>
 
   <div id="calendar"></div>
 
