--- a/login.html
+++ b/login.html
@@ -2,19 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Login - Childcare Rota</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
-<body class="login-body">
+<body>
   <div class="login-container">
-    <h1>Childcare Rota</h1>
+    <h1>Childcare Rota Login</h1>
     <form id="authForm">
       <input type="email" id="email" placeholder="Email" required />
       <input type="password" id="password" placeholder="Password" required />
       <button type="submit" id="loginBtn">Login</button>
       <button type="button" id="signupBtn">Sign Up</button>
-      <p id="authError" class="error-text"></p>
+      <p id="authError" class="error-message"></p>
     </form>
   </div>
 
