--- a/index.html
+++ b/index.html
@@ -32,15 +32,16 @@
     </select>
   </div>
 
+  <!-- Month navigation -->
   <div id="monthNavigation">
-    <button id="prevMonthBtn">&lt; Prev</button>
-    <span id="monthLabel"></span>
-    <button id="nextMonthBtn">Next &gt;</button>
+    <button id="prevMonthBtn">← Previous</button>
+    <span id="monthLabel">Month</span>
+    <button id="nextMonthBtn">Next →</button>
   </div>
 
   <div id="calendar"></div>
 
-  <div id="summary" style="display:none;">
+  <div id="summary">
     <h2>Summary</h2>
     <table>
       <thead>
