--- a/index.html
+++ b/index.html
@@ -32,16 +32,15 @@
     </select>
   </div>
 
-  <!-- Month navigation -->
   <div id="monthNavigation">
-    <button id="prevMonthBtn">← Previous</button>
-    <span id="monthLabel">Month</span>
-    <button id="nextMonthBtn">Next →</button>
+    <button id="prevMonthBtn">&lt; Previous</button>
+    <span id="monthLabel"></span>
+    <button id="nextMonthBtn">Next &gt;</button>
   </div>
 
   <div id="calendar"></div>
 
-  <div id="summary">
+  <div id="summary" style="display:none;">
     <h2>Summary</h2>
     <table>
       <thead>
