--- a/login.html
+++ b/login.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Login - Childcare Rota</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
-<body>
+<body class="login-body">
   <div class="login-container">
     <h1>Childcare Rota Login</h1>
     <form id="authForm">
@@ -14,7 +14,7 @@
       <input type="password" id="password" placeholder="Password" required />
       <button type="submit" id="loginBtn">Login</button>
       <button type="button" id="signupBtn">Sign Up</button>
-      <p id="authError" class="error-message"></p>
+      <p id="authError" class="error-text"></p>
     </form>
   </div>
 
