--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <div id="monthNavigation">
     <button id="prevMonthBtn">&lt; Previous</button>
-    <span id="monthLabel"></span>
+    <span id="monthLabel">Month Year</span>
     <button id="nextMonthBtn">Next &gt;</button>
   </div>
 
