--- a/index.html
+++ b/index.html
@@ -7,24 +7,24 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <h1>Childcare Rota</h1>
+  <h1>Childcare Rota (July–December 2025)</h1>
 
   <div class="button-container">
     <button id="showCalendarBtn">Calendar View</button>
     <button id="showSummaryBtn">Summary View</button>
     <button id="exportCsvBtn">Export CSV</button>
-    <button id="logoutBtn">Logout</button>
+    <button id="logoutBtn" style="float:right;">Logout</button>
   </div>
 
   <div id="filters">
-    <label for="filterCaregiver">Filter by Caregiver:</label>
+    <label for="filterCaregiver">Caregiver:</label>
     <select id="filterCaregiver">
       <option value="all">All</option>
       <option value="mother">Mother</option>
       <option value="father">Father</option>
     </select>
 
-    <label for="filterChild">Filter by Child:</label>
+    <label for="filterChild">Child:</label>
     <select id="filterChild">
       <option value="all">All</option>
       <option value="ivy">Ivy</option>
@@ -33,9 +33,9 @@
   </div>
 
   <div id="monthNavigation">
-    <button id="prevMonthBtn">&lt; Previous</button>
-    <span id="monthLabel">Month Year</span>
-    <button id="nextMonthBtn">Next &gt;</button>
+    <button id="prevMonthBtn">← Previous</button>
+    <span id="monthLabel">Month</span>
+    <button id="nextMonthBtn">Next →</button>
   </div>
 
   <div id="calendar"></div>
